# znai

./: .gitignore  .travis.yml  CLAUDE.md  README.md  RELEASE.md  all-pages.json  custom.js  documentation-references.js  footer.js  global-anchors.js  index.html  llm.txt  meta.json  plugin-stats.json  pom.xml  search-entries.xml  search-index.js  timestamp  toc.js
.github/: dependabot.yml
.run/: ZnaiCliApp.run.xml
CPP/: index.html
configuration/: index.html
deployment/: index.html
example-references/: index.html
flow/: index.html
hub/: index.html
iframe/: custom.html
introduction/: index.html
java/: index.html
layout/: index.html
plugins/: index.html
python/: index.html
release-notes/: index.html
snippets/: index.html
static/: __vite-browser-external-8Pss11n5.js  __vite-browser-external-BtVc6o2i.js  __vite-browser-external-C2dCodDa.js  __vite-browser-external-DCkafZPL.js  __vite-browser-external-VihCNMWn.js  architecture-7HQA4BMR-DArkNUIY.js  architecture-7HQA4BMR-DyE9zSaa.js  architecture-U656AL7Q-DjPBJmSV.js  architecture-YZFGNWBL-Bw-sxZUu.js  architectureDiagram-Q4EWVU46-CS3CMp6-.js  architectureDiagram-VXUJARFQ-CfGrVu_q.js  architectureDiagram-VXUJARFQ-ChBn1xk8.js  architectureDiagram-VXUJARFQ-D8802ZKH.js  blockDiagram-DXYQGD6D-D4Vu_b5P.js  blockDiagram-VD42YOAC-2lw2QOfM.js  blockDiagram-VD42YOAC-Budi6d17.js  c4Diagram-AHTNJAMY-DH2IvK-c.js  (+147 more)
znai-enterprise-sample-server/: README.md  pyproject.toml  requirements.txt  znai-enterprise-sample-server.py
znai-slack-bot/: .gitignore  README.md  pyproject.toml  requirements.txt  slack_bot.py
(+5434 files in other folders)
